shorten move to boards functionality on mobile view, fix responsive move-to button issue

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -194,7 +194,9 @@
         transform: scale(1.05);
     }
     .move-button-box {
-        padding-bottom: 5px;
+        /* padding-top: 0px; */
+        margin-top: -24px;
+        margin-bottom: 32px;
     }
     .move-button {
         font-weight: bold;
